# SVG_CLI

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/: Circle.h  Composition.h  Line.h  Parallelogram.h  Rectangle.h  Shape.h  Terminal.h  Utility.h
src/: Circle.cpp  Composition.cpp  Line.cpp  Parallelogram.cpp  Rectangle.cpp  Shape.cpp  Terminal.cpp  main.cpp
